[tool.poetry]
name = "azure-blog-api"
version = "0.1.0"
description = ""
authors = ["Erich Reitzs <erreitz@outlook.com>"]
readme = "README.md"
packages = [{include = "azure_blog_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
